--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,9 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
       
-        <p class="view">Follow me on Twitter: <a href="https://twitter.com/tychovdo">@tychovdo</a> !</p>
+        <p class="view">Mail: gmverkes [at] gmail [dot] com</p>
 
-        <p class="view">Mail: tychovdo [at] gmail [dot] com</p>
-
-        <p class="view"><a href="https://www.linkedin.com/in/tychovdo">View My LinkedIn Profile</a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/govert-verkes/">View My LinkedIn Profile</a></p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
